=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.96

   * aromatic bond display

   * mol2 and multi-mol2 reading capability

   -- beta 16
   * added experimental ability to calculate vacuum electrostatic 
     potentials

   * fixed bugs with map_double, map_new, and color ramping

   -- beta 15

   * annotation wizard (e.g. for SD files -- experimental)

   -- beta 14

   * additional support for weird concatenated PDB files such as those
     output by MOE

   * fixed problem with rendering of discontinuous surfaces

   -- beta13
   
   * get_angle, get_distance commands
 
   * fixed pasting to OpenGL window under X11

   * fixed "Get View" button in MacPyMOL, now also copying
     matrix direct to the clipboard in all versions.  

   * API load actions now run quietly by default, like other functions.

   * pdb_reformat_names_mode = 3 gives IUPAC internally with PDB I/O
     pdb_reformat_names_mode = 1 (PDB) & 2 (Amber/IUPAC), now
     correctly handle 3-letter names correctly for various hydrogens

   * fixed occasional "snail track" bug with surfaces

   * seq_view_label_mode setting

   * wizard prompt now avoids overlap with sequence browser

   * double-click-to-center now uses current state coordinates only

   * tentative PQR file reading support

   * fixed major bug in map ranging code

   -- beta 11

   * updated color handling for sequence viewer

   * new settings: auto_classify_atoms, selection operators:
     polymer, solvent, organic, inorganic

   * transparency_mode now subordinates backface_cull and 
     two_sided_lighting in OpenGL and the ray tracer

   * seq_view settings

   * sequence viewer is now "in"

   * mouse_selection_mode setting

   * got real busy on the sequence viewer

   * created plugin menu

   * further menu consolidation to make room for plugin menus

   * fixed "use display lists" menu option
